--- a/resources/views/posts/index.edge
+++ b/resources/views/posts/index.edge
@@ -1,1 +1,9 @@
 <h1>{{title}}</h1>
+<ul>
+
+  @each(post in posts)
+  <li><h3>{{post.title}}<h3>
+    <p>{{post.body}}<p>
+  </li>
+  @endeach
+</ul>
